Fix inline-block mixin alignment

--- a/mixins/_inline-block.sass
+++ b/mixins/_inline-block.sass
@@ -2,8 +2,8 @@
 =inline-block($align: middle)
   display: -moz-inline-stack
   display: inline-block
-  @if $align != none
+  @if $align and $align != none
     vertical-align: $align
-    *vertical-align: auto
-  *zoom: 1
+  *vertical-align: auto
+  zoom: 1
   *display: inline
